--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} • {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body>
+  <body class="bg-gray-300 pb-10 pt-5">
     {{ content}}
   </body>
 </html>
