--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }} • {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body class="bg-gray-300 pb-10 pt-5">
+  <body class="bg-gray-300 pb-10">
     {{ content}}
   </body>
 </html>
