Initial SEO session

--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -34,7 +34,7 @@ layout: default
         <li class="leading-snug py-2">
           <span class="text-blue-600">History: </span>
           <p class="text-gray-700">
-            {{ page.history }}
+            {{ page.description }}
           </p>
         </li>
         <li class="leading-snug py-2">
