--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -572,6 +572,10 @@ video {
   background-color: rgba(226, 232, 240, var(--bg-opacity));
 }
 
+.bg-hero-pattern {
+  background-image: url('/assets/images/topography.svg');
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -604,10 +608,6 @@ video {
   flex-direction: column;
 }
 
-.font-serif {
-  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
 .font-mono {
   font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -618,6 +618,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-screen {
@@ -634,6 +638,10 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
 }
 
 .text-5xl {
@@ -656,9 +664,9 @@ video {
   line-height: 1.375;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mx-auto {
@@ -670,8 +678,20 @@ video {
   margin-bottom: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .object-cover {
@@ -711,6 +731,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -723,10 +748,6 @@ video {
 
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -798,6 +819,15 @@ video {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-48 {
