Add new card and restyle card template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#c9d8e2">
   </head>
-  <body class="bg-hero-pattern bg-gray-100 font-mono pb-10 antialiased">
+  <body class="{{page.bg-terra | append: "bg-gray-100 font-mono pb-10 antialiased" }}">
     {{ content }}
   </body>
 </html>
