--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="theme-color" content="#c9d8e2">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9b2c2c">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body class="{{page.bg-terra | append: "bg-gray-100 font-mono pb-10 antialiased" }}">
     {{ content }}
