--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,16 +7,19 @@
     <title>{{ page.title }} • {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <!--favicon code-->
-    <link rel="icon" href="https://www.kipukas.cards/favicon.ico?v={{ "now" | date: "%Y%m%d%H%M"}}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9b2c2c">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=PYAAO2vamy">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=PYAAO2vamy">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png?v=PYAAO2vamy">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=PYAAO2vamy">
+    <link rel="manifest" href="/site.webmanifest?v=PYAAO2vamy">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=PYAAO2vamy" color="#9b2c2c">
+    <link rel="shortcut icon" href="/favicon.ico?v=PYAAO2vamy">
     <meta name="apple-mobile-web-app-title" content="Kipukas">
     <meta name="application-name" content="Kipukas">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
+
+
   </head>
   <body class="{{page.bg-terra | append: "bg-gray-100 font-mono pb-10 antialiased" }}">
     {{ content }}
