Add cards and fix small bugs

--- a/_layouts/ka_alana.html
+++ b/_layouts/ka_alana.html
@@ -67,9 +67,7 @@ layout: default
     <div class="flex">
       <a class="{{ site.btn-center }}" href="/">Back to Binder</a>
     </div>
-    <div class="content">
-      <p class="font-hairline text-sm mt-6">{{ page.promotion }}</p>
-      <p class="font-hairline text-xs">{{ page.promotion_conditions }}</p>
-    </div>
+    <p class="font-hairline text-gray-500 text-sm mt-6">{{ page.promotion }}</p>
+    <p class="font-hairline text-gray-400 text-xs">{{ page.promotion_conditions }}</p>
   </div>
 </div>
