Add brawl mechanic

--- a/_layouts/ka_alana.html
+++ b/_layouts/ka_alana.html
@@ -41,6 +41,10 @@ layout: default
           <span class="text-blue-600">Play Style: </span>
           <p class="text-gray-700">{{ page.play_style }}</p>
         </li>
+        <li class="leading-snug py-2">
+          <span class="text-blue-600">Brawl Power: </span>
+          <p class="text-gray-700">{{ page.brawl_power }}</p>
+        </li>
         <li class="leading-snug py-2"><span class="text-blue-600">Weak Points: </span>
         <ul class="px-5">
           <li class="pb-2 px-2"><span class="text-gray-800">Sub-critical: </span>
