Change to brawl sequence

--- a/_layouts/ka_alana.html
+++ b/_layouts/ka_alana.html
@@ -43,7 +43,7 @@ layout: default
         </li>
         <li class="leading-snug py-2">
           <span class="text-blue-600">Brawl Power: </span>
-          <p class="text-gray-700">{{ page.brawl_power }}</p>
+          <p class="text-gray-700">{{ page.brawl_sequence }}</p>
         </li>
         <li class="leading-snug py-2"><span class="text-blue-600">Weak Points: </span>
         <ul class="px-5">
