Perfect search bar behavior

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 
   </head>
-  <body class="{{page.bg-terra | append: "bg-gray-100 font-mono pb-10 antialiased" }}">
+  <body class="{{page.bg-terra | append: "bg-gray-100 font-mono pb-10 antialiased h-screen m-0" }}" onclick="{{page.body-click}}">
     {{ content }}
   </body>
 </html>
