--- a/_layouts/ka_alana.html
+++ b/_layouts/ka_alana.html
@@ -29,6 +29,10 @@ layout: default
           {{ page.genetic_disposition }}
         </p>
       </li>
+      <li class="leading-snug py-2">
+        <span class="text-blue-600">Motivation: </span>
+        <p class="text-gray-700">{{ page.motivation }}</p>
+      </li>
       <li class="leading-snug py-2"><span class="text-blue-600">Keal Means: </span>
           <br>
           <span class="text-gray-700">
@@ -39,7 +43,7 @@ layout: default
           </span>
       </li>
       <li class="leading-snug py-2">
-        <span class="text-blue-600">Injury Tolerance: </span>
+        <span class="text-blue-600">Keal Means Tolerance: </span>
         <p class="text-gray-700">{{ page.injury_tolerance }}</p>
       </li>
       <li class="leading-snug py-2">
