--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <div class="z-50 flex px-5 py-1 gap-x-4 flex-wrap sticky top-0 bg-emerald-50/95" :class="{ 'bg-hero-pattern': terrab }">
 
   <div class="flex flex-auto md:hidden break-after-right md:break-after-avoid transition hover:scale-105 active:scale-95" x-transition.duration.300 x-show="terrab">
-    <a href="./" class="flex flex-1 place-content-center md:hidden h-28" x-transition.duration.300 x-show="terrab">
-      <img class="h-28 w-auto" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
+    <a href="./" class="flex flex-1 place-content-center md:hidden h-28 w-52" x-transition.duration.300 x-show="terrab">
+      <img class="h-28 w-52" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
     </a>
   </div>
 
   <div class="hidden md:block break-after-avoid transition hover:scale-105 active:scale-95">
-    <a href="./" class="hidden md:block h-32">
-      <img class="h-32 w-auto" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
+    <a href="./" class="hidden md:block h-32 w-60">
+      <img class="h-32 w-60" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
     </a>
   </div>
 
