--- a/_includes/search_bar.html
+++ b/_includes/search_bar.html
@@ -5,6 +5,6 @@
     </svg>
   </div>
   <div class="flex flex-auto">
-    <input type="text" id="search-input" placeholder="Search the Binder"  class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+    <input type="text" id="search-input" placeholder="Search the Binder" size="13"  class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
   </div>
 </div>
