Post new cards and PWA work

--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -19,10 +19,11 @@ layout: default
 
 {% if page.landscape %}
   <div class="bg-hero-pattern place-content-center hidden lg:flex w-screen min-h-screen h-fit bg-fixed">
+    <div class=" fixed bg-slate-600/70 h-screen w-[1444px]"></div>
     <img class="fixed h-screen object-none brightness-50 contrast-125 saturate-150" src="{{ '/assets/images/' | append: page.img_name }}" alt="{{ page.img_alt }}">
     <div class="grid grid-cols-1 text-slate-200 text-justify leading-tight h-screen w-1/2 min-h-screen scroll-smooth">
       <div class="flex-initial fixed inset-0 h-[888px] w-[1444px] invisible"></div>
-      <p class="text-2xl relative top-0 md:text-4xl py-5 place-self-center text-center">{{ page.title }}</p>
+      <p class="text-2xl pt-5 relative top-0 md:text-4xl py-5 place-self-center text-center">{{ page.title }}</p>
       {{ content }}
       <div class="flex place-self-center">
         <a class="{{ site.data.templates.btn-center-transparent }} z-30" href="/">Back to Binder</a>
