--- a/_layouts/trap.html
+++ b/_layouts/trap.html
@@ -1,9 +1,9 @@
 ---
 layout: card
 ---
-{% include card_data_format.html data_title='Activation-Dectection Criteria' play_data=page.criteria %}
+{% include card_data_format.html data_title='Activation-detection Criteria' play_data=page.criteria %}
 {% include card_data_format.html data_title='On Activation' play_data=page.activation %}
-{% include card_data_format.html data_title='On Dectection' play_data=page.dectection %}
+{% include card_data_format.html data_title='On detection' play_data=page.detection %}
 {% include card_data_format.html data_title='card variation' play_data=page.variation %}
 {% include card_data_format.html data_title='Scarcity' play_data=page.scarcity %}
 {% include card_data_format.html data_title='History' play_data=page.description %}
