--- a/_includes/search_bar.html
+++ b/_includes/search_bar.html
@@ -1,10 +1,17 @@
 <div class="flex flex-auto place-content-center place-self-center h-10">
-  <div class="ml-auto my-auto aria-label="Take me to the search page.">
-    <svg class="h-12 w-12" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
+  <div href="./search" class=" ml-auto my-auto" aria-label="Take me to the search page.">
+    <svg class="h-10 w-10 stroke-2 stroke-kip-drk-sienna fill-transparent" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"/>
     </svg>
   </div>
-  <div class="flex flex-auto">
-    <input type="text" id="search-input" placeholder="Search the Binder" size="13"  class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+
+  <div class="md:flex md:flex-auto hidden">
+    <input type="text" id="search-input" placeholder="Search the Binder" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
   </div>
+
+  <div class="flex flex-auto md:hidden">
+    <input type="text" id="search-input" placeholder="Search" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+  </div>
+
 </div>
