--- a/_includes/search_bar_link.html
+++ b/_includes/search_bar_link.html
@@ -1,10 +1,17 @@
 <div class="flex flex-1 place-content-center place-self-center">
+
   <a href="./search" class=" ml-auto my-auto" aria-label="Take me to the search page.">
-    <svg class="h-12 w-12" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <svg class="h-10 w-10 stroke-2 stroke-kip-drk-sienna fill-transparent" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"/>
     </svg>
   </a>
-  <div class="flex flex-auto">
-    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md"><span class="text-gray-500 whitespace-nowrap">Search the Binder</span></a>
+
+  <div class="md:flex md:flex-auto hidden">
+    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md"><span class="text-gray-400 whitespace-nowrap">Search the Binder</span></a>
   </div>
+
+  <div class="flex flex-auto md:hidden">
+    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md"><span class="text-gray-400 whitespace-nowrap">Search</span></a>
+  </div>
+
 </div>
