Add QR Functionality

--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -38,7 +38,7 @@
             // Check if the URL starts with "http://" or "https://"
             if url.startsWith('https://')) {
               // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
-              window.location.href = url.replace('https://', 'https://kpks.us/'//'http://127.0.0.1:4000/');
+              window.location.href = url.replace('https://', 'https://kpks.us/'); //'http://127.0.0.1:4000/');
             } else {
               console.log('Invalid URL detected in QR code');
             }
