--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -1,6 +1,6 @@
-<div class="z-50 fixed w-10/12 md:w-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mt-1">
-  <video id="video" class="aspect-video" x-show="showScanner" x-transition style="display:none;"></video>
-  <canvas id="canvas" class="aspect-video" style="display:none;"></canvas>
+<div class="z-50 fixed w-full md:w-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mt-1">
+  <video id="video" class="aspect-video w-full h-auto" x-show="showScanner" x-transition style="display:none;"></video>
+  <canvas id="canvas" class="aspect-video w-full h-auto" style="display:none;"></canvas>
 
   <script>
     // Access the video and canvas elements
@@ -9,20 +9,21 @@
     const context = canvas.getContext('2d');
 
     // Function to start scanning for QR codes
-    function startScanning() {
-      // Get access to the camera
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' } })
-        .then(function(stream) {
-          video.srcObject = stream;
-          video.setAttribute('playsinline', true); // required to tell iOS safari we don't want fullscreen
-          video.play();
-          requestAnimationFrame(scan);
-        })
-        .catch(function(err) {
-          console.error('Camera access error:', err);
-        });
+    function startScanning(showModal) {
+      if (showModal) {
+        // Get access to the camera
+        navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' } })
+          .then(function(stream) {
+            video.srcObject = stream;
+            video.setAttribute('playsinline', true); // required to tell iOS safari we don't want fullscreen
+            video.play();
+            requestAnimationFrame(scan);
+          })
+          .catch(function(err) {
+            console.error('Camera access error:', err);
+          });
+      }
     }
-
     // Function to scan for QR codes
     function scan() {
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
@@ -47,8 +48,5 @@
       }
       requestAnimationFrame(scan);
     }
-
-    // Start scanning when the page loads
-    startScanning();
   </script>
 </div>
